# minicompiler

./: .gitignore  Cargo.toml  README.md
docs/: language_spec.md
src/: main.rs
src/lexer/: error.rs  mod.rs  scanner.rs  token.rs
src/tests/: lexer_tests.rs
src/tests/valid/: test_identifiers.src
tests/: lexer_tests.rs
